Fixed the Language selection bug - see http://bugs.centos.org/view.php?id=7217

--- a/kickstarts/centos-7-livecd.cfg
+++ b/kickstarts/centos-7-livecd.cfg
@@ -1186,6 +1186,10 @@ touch /.liveimg-configured
 # https://bugzilla.redhat.com/show_bug.cgi?id=679486
 echo "localhost" > /etc/hostname
 
+# Fixing the lang install issue when other lang than English is selected . See http://bugs.centos.org/view.php?id=7217
+/usr/bin/cp /usr/lib/python2.7/site-packages/blivet/size.py /usr/lib/python2.7/site-packages/blivet/size.py.orig
+/usr/bin/sed -i "s#return self.humanReadable()#return self.humanReadable().encode('utf-8')#g" /usr/lib/python2.7/site-packages/blivet/size.py
+
 EOF
 
 # bah, hal starts way too late
