Added UEFI support (extra packages required) and removed some other packages on the livecd (space constraints due to the EFI/ structure and images)

--- a/kickstarts/centos-7-live-kde.cfg
+++ b/kickstarts/centos-7-live-kde.cfg
@@ -41,9 +41,13 @@ repo --name=base --baseurl=http://buildlogs.centos.org/centos/7/os/x86_64-latest
 #Live install tools
 anaconda
 system-config-keyboard
-grub2
 firefox
 
+# For UEFI/Secureboot support
+grub2
+grub2-efi
+efibootmgr
+shim
 
 %end
 
