--- a/kickstarts/centos-7-livecd.cfg
+++ b/kickstarts/centos-7-livecd.cfg
@@ -213,7 +213,6 @@ glusterfs-api
 glusterfs-libs
 glx-utils
 gmp
-gnome-backgrounds
 gnome-bluetooth
 gnome-bluetooth-libs
 gnome-calculator
@@ -313,7 +312,6 @@ harfbuzz-icu
 hicolor-icon-theme
 hostname
 hplip-common
-hplip-libs
 hunspell
 hunspell-en
 hunspell-en-GB
@@ -324,7 +322,6 @@ ibus-chewing
 ibus-gtk2
 ibus-gtk3
 ibus-hangul
-ibus-kkc
 ibus-libs
 ibus-m17n
 ibus-rawcode
@@ -480,9 +477,6 @@ libimobiledevice
 libiptcdata
 libiscsi
 libjpeg-turbo
-libkkc
-libkkc-common
-libkkc-data
 libldb
 libmnl
 libmodman
@@ -527,7 +521,6 @@ libreport-web
 libreswan
 librsvg2
 libsamplerate
-libsane-hpaio
 libsecret
 libselinux
 libselinux-python
@@ -685,8 +678,6 @@ NetworkManager-libreswan
 NetworkManager-tui
 newt
 newt-python
-nhn-nanum-fonts-common
-nhn-nanum-gothic-fonts
 nm-connection-editor
 nspr
 nss
@@ -863,9 +854,6 @@ rsyslog-mmjsonparse
 rtkit
 samba-common
 samba-libs
-sane-backends
-sane-backends-drivers-scanners
-sane-backends-libs
 satyr
 sbc
 scl-utils
@@ -888,7 +876,6 @@ shared-mime-info
 sil-abyssinica-fonts
 sil-nuosu-fonts
 sil-padauk-fonts
-skkdic
 slang
 smartmontools
 smc-fonts-common
@@ -1022,6 +1009,13 @@ yum-utils
 zenity
 zip
 zlib
+
+# For UEFI/Secureboot support
+grub2
+grub2-efi
+efibootmgr
+shim
+
 
 
 %end
