updates and prebaked docker images

--- a/kickstarts/centos-7-EasyDocker.cfg
+++ b/kickstarts/centos-7-EasyDocker.cfg
@@ -50,6 +50,12 @@ ExecStart=/usr/bin/docker -d --selinux-enabled -H tcp://0.0.0.0:2375 -H unix:///
 
 EOF
 
+# try to import docker bits ahead of time
+wget http://people.centos.org/jperrin/EasyDocker/docker.tar.xz
+tar xf docker.tar.xz -C /var/lib/
+
+
+
 # Autologin
 rm /etc/systemd/system/getty.target.wants/getty@tty1.service
 cp /lib/systemd/system/getty@.service /etc/systemd/system/getty@tty1.service
