Removed NetworkManager-config-server from livecd : not needed

--- a/kickstarts/centos-7-livecd.cfg
+++ b/kickstarts/centos-7-livecd.cfg
@@ -667,7 +667,7 @@ net-snmp-libs
 nettle
 net-tools
 NetworkManager
-NetworkManager-config-server
+#NetworkManager-config-server
 NetworkManager-glib
 NetworkManager-libreswan
 NetworkManager-tui
