Reflected the 7.0.1406 move from mirror.c.o to vault.c.o

--- a/kickstarts/centos-7-livecd.cfg
+++ b/kickstarts/centos-7-livecd.cfg
@@ -15,7 +15,7 @@ rootpw --iscrypted $6$K2nKf02kVKG68960$OywvoaViphSITuro/liKvCj7Pm/CH/xqzz/lsoXya
 
 # Workaround for the grubby issue on live media (see https://bugzilla.redhat.com/show_bug.cgi?id=1153410)
 repo --name=base --baseurl=http://mirror.centos.org/centos/7.1.1503/os/x86_64/ --excludepkgs=grubby
-repo --name=grubby --baseurl=http://mirror.centos.org/centos//7.0.1406/os/x86_64/ --includepkgs=grubby
+repo --name=grubby --baseurl=http://vault.centos.org/7.0.1406/os/x86_64/ --includepkgs=grubby
 
 %packages
 abattis-cantarell-fonts
