--- a/kickstarts/centos-7-live-gnome-i386.cfg
+++ b/kickstarts/centos-7-live-gnome-i386.cfg
@@ -1,7 +1,7 @@
 
-lang en_GB.UTF-8
+lang en_US.UTF-8
 keyboard us
-timezone Europe/Brussels --isUtc
+timezone Etc/UTC --isUtc
 auth --useshadow --enablemd5
 selinux --enforcing
 firewall --enabled --service=mdns
@@ -15,8 +15,8 @@ rootpw --iscrypted $6$K2nKf02kVKG68960$OywvoaViphSITuro/liKvCj7Pm/CH/xqzz/lsoXya
 
 # Workaround for the grubby issue on live media (see https://bugzilla.redhat.com/show_bug.cgi?id=1153410)
 repo --name=base --baseurl=http://mirror.centos.org/altarch/7/os/i386/ --excludepkgs=grubby
-repo --name=grubby --baseurl=http://dev.centos.org/c7.00.02/
-repo --name=updates --baseurl=http://mirror.centos.org/altarch/7/updates/i386/
+repo --name=grubby --baseurl=http://dev.centos.org/c7.00.02/ --includepkgs=grubby --excludepkgs=*.x86_64
+repo --name=updates --baseurl=http://mirror.centos.org/altarch/7/updates/i386/ --excludepkgs=grubby
  
 %packages
 @base
