- Fixed the virbr0/libvirt issue in live images - Removed the previous livepayload patch (not needed anymore)

--- a/kickstarts/centos-7-live-gnome.cfg
+++ b/kickstarts/centos-7-live-gnome.cfg
@@ -35,6 +35,8 @@ repo --name=base --baseurl=http://mirror.centos.org/centos/7/os/x86_64/
 @office-suite
 @remote-desktop-clients
 @gnome-apps
+-libvirt
+-gnome-boxes
 
 
 #Live install tools
@@ -218,41 +220,7 @@ echo "localhost" > /etc/hostname
 
 EOF
 
-# Patching livepayload too https://bugzilla.redhat.com/show_bug.cgi?id=1100504
-cat > /tmp/livepayload.patch <<EOF
---- /usr/lib64/python2.7/site-packages/pyanaconda/packaging/livepayload.py.orig	
-+++ /usr/lib64/python2.7/site-packages/pyanaconda/packaging/livepayload.py
-@@ -152,6 +152,13 @@
-             self.pct = 100
-         threadMgr.wait(THREAD_LIVE_PROGRESS)
- 
-+        # Live needs to create the rescue image before bootloader is written
-+        for kernel in self.kernelVersionList:
-+            log.info("Generating rescue image for %s", kernel)
-+            iutil.execInSysroot("new-kernel-pkg",
-+                                ["--rpmposttrans", kernel])
-+
-+
-     def postInstall(self):
-         """ Perform post-installation tasks. """
-         progressQ.send_message(_("Performing post-installation setup tasks"))
-@@ -159,12 +166,6 @@
- 
-         super(LiveImagePayload, self).postInstall()
- 
--        # Live needs to create the rescue image before bootloader is written
--        for kernel in self.kernelVersionList:
--            log.info("Generating rescue image for %s", kernel)
--            iutil.execInSysroot("new-kernel-pkg",
--                                ["--rpmposttrans", kernel])
--
-         # Make sure the new system has a machine-id, it won't boot without it
-         if not os.path.exists(iutil.getSysroot()+"/etc/machine-id"):
-             iutil.execInSysroot("systemd-machine-id-setup", [])
 
-EOF
-
-patch -p0 /usr/lib64/python2.7/site-packages/pyanaconda/packaging/livepayload.py /tmp/livepayload.patch 
 
 # bah, hal starts way too late
 cat > /etc/rc.d/init.d/livesys-late << EOF
