- Ensuring tracke isn't enabled for live media (eats whole cpu while   indexing on startup and doesn't let user test the live media) - "cosmetic" icon size for live media (#13768)

--- a/kickstarts/centos-7-live-gnome.cfg
+++ b/kickstarts/centos-7-live-gnome.cfg
@@ -220,6 +220,19 @@ echo "localhost" > /etc/hostname
 /usr/bin/cp /usr/lib/python2.7/site-packages/blivet/size.py /usr/lib/python2.7/site-packages/blivet/size.py.orig
 /usr/bin/sed -i "s#return self.humanReadable()#return self.humanReadable().encode('utf-8')#g" /usr/lib/python2.7/site-packages/blivet/size.py
 
+# Fixing *huge* icons size in gnoe 3.22 due to "design" decision
+# https://bugs.centos.org/view.php?id=13768
+cat > /etc/dconf/db/distro.d/99-gnome-icon-size << FOE
+# To set gnome icon size to small by default
+[org/gnome/nautilus/icon-view]
+default-zoom-level='small'
+FOE
+/usr/bin/dconf update
+
+# Enforcing tracker indexing service to *not* start on Live Media as it uses all CPU and so conflict with proper operation including liveinst
+for file in /etc/xdg/autostart/tracker*.desktop ; do sed -i s/X-GNOME-Autostart-enabled=true/X-GNOME-Autostart-enabled=false/g $file ; done
+
+
 EOF
 
 
