Ensuring gnome-software doesn't download updates on live session (useless and kills cpu)

--- a/kickstarts/centos-7-live-gnome.cfg
+++ b/kickstarts/centos-7-live-gnome.cfg
@@ -227,6 +227,14 @@ cat > /etc/dconf/db/distro.d/99-gnome-icon-size << FOE
 [org/gnome/nautilus/icon-view]
 default-zoom-level='small'
 FOE
+
+cat > /etc/dconf/db/distro.d/99-disable-gnome-software-download << FOE
+# Don't allow gnome software to eat cpu on live session
+[org/gnome/software]
+download-updates=false
+FOE
+
+
 /usr/bin/dconf update
 
 # Enforcing tracker indexing service to *not* start on Live Media as it uses all CPU and so conflict with proper operation including liveinst
